[project]
name = "andwithor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Syed Safdar Ali Shah", email = "programmersafdar@live.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.100.1",
    "crewai-tools>=0.33.0",
]

[project.scripts]
andwithor = "andwithor:main"
withand = "andwithor.ExampleAndOR:kickoff"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
